# nonebot-plugin-get-nickname

./: README.md  pyproject.toml
nonebot_plugin_get_nickname/: __init__.py  errors.py  func_manager.py
nonebot_plugin_get_nickname/get_bot_nickname/: __init__.py  console.py  kaiheila.py  onebot_v11.py  qqguild.py
nonebot_plugin_get_nickname/get_nickname/: __init__.py  console.py  kaiheila.py  onebot_v11.py  qqguild.py
nonebot_plugin_get_nickname/get_nickname_by_id/: __init__.py  console.py  kaiheila.py  onebot_v11.py  qqguild.py
nonebot_plugin_test_get_nickname/: __init__.py
